--- a/SalesAndInventory.Api/appsettings.json
+++ b/SalesAndInventory.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesAndInventoryDbConnection": "Server=(localdb)\\mssqllocaldb;Database=TSQLV6;Trusted_Connection=True;"
+  }
 }
