Added CRUD functionality for employees with Unit of Work and Repository patterns.

--- a/SalesAndInventory.Data/SalesAndInventory.Data.csproj
+++ b/SalesAndInventory.Data/SalesAndInventory.Data.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SalesAndInventory.Models\SalesAndInventory.Models.csproj" />
+    <ProjectReference Include="..\SalesAndInventory.Shared\SalesAndInventory.Shared.csproj" />
   </ItemGroup>
 
 </Project>
