--- a/SalesAndInventory.Shared/SalesAndInventory.Shared.csproj
+++ b/SalesAndInventory.Shared/SalesAndInventory.Shared.csproj
@@ -11,7 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SalesAndInventory.Models\SalesAndInventory.Models.csproj" />
+    <Folder Include="Dtos\" />
+    <Folder Include="Repositories\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
