Implement Employee CRUD operations with AutoMapper and DTOs

--- a/SalesAndInventory.Api/appsettings.json
+++ b/SalesAndInventory.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesAndInventoryDbConnection": "Server=(localdb)\\mssqllocaldb;Database=TSQLV6;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TSQLV6;Trusted_Connection=True;"
   }
 }
