--- a/SalesAndInventory.Api/appsettings.json
+++ b/SalesAndInventory.Api/appsettings.json
@@ -1,8 +1,20 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+    ],
+    "Enrich": [ "FromLogContext" ],
+    "Properties": {
+      "Application": "SalesAndInventory"
     }
   },
   "AllowedHosts": "*",
