--- a/SalesAndInventory.IntegrationTests/SalesAndInventory.IntegrationTests.csproj
+++ b/SalesAndInventory.IntegrationTests/SalesAndInventory.IntegrationTests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Evolve" Version="2.4.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.15" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="xunit" Version="2.4.2" />
